--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -43,7 +43,7 @@ body {
   font-size: 2.5rem;
   letter-spacing: 0.25rem;
   font-weight: 600;
-  color: #81b29a;
+  color: #F5DE80;
 }
 
 .btn {
@@ -146,4 +146,5 @@ body {
     transform: scale(1.5);
   }
 }
+
 
