--- a/src/index.scss
+++ b/src/index.scss
@@ -31,3 +31,16 @@
 //   line-height: 1;
 //   font-family: "Poppins", sans-serif;
 // }
+
+::-webkit-scrollbar {
+    width: 7px; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #e22f2c;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background-color: #F5DE80;
+    border-radius: 100rem;
+}
